[package]
name = "std-future"
version = "0.1.0"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2018"

[dependencies]
# tokio = { git = "https://github.com/tokio-rs/tokio", features=["async-await-preview"] }
tokio = { git = "https://github.com/tokio-rs/tokio" }
futures-preview = "0.3.0-alpha.17"